USFit.Web/Content/Site.css
/* ... */
    a.twitter {
        background: url("../Images/twitter-32x32.png") no-repeat;
    }

.checkout-border-left
{
    border-left: 1px solid #3F7E3F;
    padding:.5em;
}

.special-event table
{
 border-collapse:collapse;
}

.special-event table th
{
 text-align:left;
}

.special-event table td.center
{
 text-align:right;
}

.special-event ul
{
    margin:0px;
    margin-left:.5em;
    padding:0px;
}

.special-event li
{
    list-style:none;
}

section#secondary-contacts h3
{
    margin-top:.5em;
    font-weight:200;
    font-size:1.75em;
    line-height:2em;
}
section#secondary-contacts .spacer
{
    margin-top:.25em;
    margin-bottom:.25em;
    margin-left:1.5em;
}


section#secondary-contacts ul
{
    margin:0px;
    margin-left:2em;
    padding:0px;
}

section#secondary-contacts li
{
    list-style:none;
}
section#secondary-contacts li span
{
    font-size:1.75em;
    font-weight:600;
}    

section#secondary-contacts li span.phone
{
    font-size:1.5em;
    font-weight:400;
}

section#pricing
{
    margin-top:1em;
}

section#buy-now
{
    margin-top:2em;
    margin-bottom:2em;
}

section#buy-now input
{
    margin-top:1em;
}

section#buy-now div
{
    background-color:#E0E0E0;
    padding:.5em;
    border: 1px solid #B5B5B5;
    border-bottom-right-radius:8px;
    border-bottom-left-radius:8px;
    border-top-right-radius:8px;
    border-top-left-radius:8px;
}

div.buy-now
{
    margin-bottom:2em;
    background-color:#E0E0E0;
    padding:.5em;
    border: 1px solid #B5B5B5;
    border-bottom-right-radius:8px;
    border-bottom-left-radius:8px;
    border-top-right-radius:8px;
    border-top-left-radius:8px;
}

div.buy-now input
{
    margin-top:1em;
}


div#obstacle-course-more-info
{
    margin-top:1em;
    margin-bottom:1em;
}


div#featured-contacts h2
{
    text-transform:uppercase;
    font-size:1.75em;
    font-weight:200;
    line-height:2em;
    border-bottom:1px solid black;
}
div#featured-contacts
{
    min-height:100%;
}
div#featured-contacts p
{
    margin-top:1em;
    font-size:1.25em;
}

div#featured-contacts p span
{
    font-size:1.5em;
    font-weight:500;
    display:block;
}

section#oc-intro p
{
    margin-left:2em;
}

/* home page styles */
div.primary-nav-button
{
    margin-bottom:4em;
}

.target-image-container
{
    min-height:400px;
    height:400px;
}
div.target-descr
{
    min-height:110px;
}

#primary-message blockquote, #primary-message blockquote p 
{
    font-size:1.25em;
    font-weight:100;
}

#primary-message span
{
    font-weight:900;
}

#primary-message blockquote cite
{
    font-size:1.25em;
}

h2#location-header
{
    font-size:1.5em;
    display:inline;
    font-weight:400;
}

h2#location-header span
{
    font-size:1.25em;
    display:inline;
    font-weight:400;
}

a.more-info
{
    font-size:2em;
}
img.more-info
{
    margin-top:-.7em;
    margin-right:.5em;
}


/* Pricing Page Styles */
#pricing-container
{
    margin-top:2em;
    height:14em;
}
.price-column, .price-column-left, .price-column-right
{
    float:left;
    width:8em;
    border: 1px solid #444;
}


div.cell
{
    display:block;
    text-align:center;
}

div.cell-header
{
    height:4em;
    font-size:1.3em;
    font-weight:500;
}

.best-value div.cell-header
{
    font-size:1.5em;
    font-weight:bold;
    padding-top:.5em;
    height:3.75em;
}

div.cell-footer
{
    height:1em;
}

div.cell-header, div.cell-footer
{
    color:#ffffff;
    background-color:#a1a1a1;
}

div.header-left
{
    border-top-left-radius:8px;
}
div.header-right
{
    border-top-right-radius:8px;
}
div.footer-right
{
    border-bottom-right-radius:8px;
}
div.footer-left
{
    border-bottom-left-radius:8px;
}

div.price-cell
{
    height:7em;
}

.price-column-left
{
    border-bottom-left-radius:8px;
    border-top-left-radius:8px;
}

.price-column-right
{
    border-bottom-right-radius:8px;
    border-top-right-radius:8px;
}

.coupon
{
    margin-top:2em;
    text-align:center;
}
.best-value
{
    margin-top:-1em;
    width:12em;
    border-bottom-right-radius:8px;
    border-top-right-radius:8px;
    border-bottom-left-radius:8px;
    border-top-left-radius:8px;
}

div.best-value .cell-header, div.best-value .cell-footer
{
    background-color:#ff5d01;
}
span.best-value, span.popular
{
    font-size:.75em;
}
.bestvalue-price-cell
{
    font-size:1.5em;
    font-weight:bold;
    height:5em;
}

.bestvalue-price-cell span
{
    position:relative;
    top:1.25em;
}
/* ... */

